tests/od2trips/errors/false_options/false_output/errors.od2trips
Error: Could not build output file 'xxxx/trips.trips.xml' (No such file or directory).
Quitting (on error).
